[gd_scene load_steps=4 format=3 uid="uid://h35ashjck8lj"]

[ext_resource type="Script" path="res://Scenes/GUI/LevelUpMenu.gd" id="1_jyqly"]
[ext_resource type="PackedScene" uid="uid://bip8gaoagg0k3" path="res://Scenes/GUI/LevelUpMenuRow.tscn" id="2_nkirg"]
[ext_resource type="PackedScene" uid="uid://bix4yxrfu236h" path="res://Scenes/Characters/Player.tscn" id="2_ua8n7"]

[node name="LevelUpMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
script = ExtResource("1_jyqly")

[node name="Player" parent="." instance=ExtResource("2_ua8n7")]
position = Vector2(329, 239)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -49.0
offset_right = 117.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PointsLeftLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "-"

[node name="DamageRow" parent="VBoxContainer" instance=ExtResource("2_nkirg")]
unique_name_in_owner = true
layout_mode = 2

[node name="HPRow" parent="VBoxContainer" instance=ExtResource("2_nkirg")]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "OK"
